fix: use flexbox for history items to prevent text wrap

--- a/css/style.css
+++ b/css/style.css
@@ -363,13 +363,15 @@ input[type=range]::-ms-thumb {
     margin: 5px 0;
     padding: 10px;
     background-color: none;
+    display: flex;
+    align-items: center;
 }
 
 .historic .cover-historic { 
     width: 95px;
     height: 95px;
     margin-right: 15px;
-    float: left;
+    flex-shrink: 0;
     border-radius: 10px;
     background: url('../img/cover.png') no-repeat;
     background-size: cover;
